wayland: Set default cursor shape for the root window

Previously, it was done by plasmashell, now it needs to be done by kwin.

BUG: 442539